Bug 1865598 - Yahoo imap fix for filtering and new message detection. r=mkmelin

This is caused by a fairly recent change by yahoo that returns UID
fetch items with highest sequence/UID first instead of last. Most (all?)
other server types return fetches with lowest seq/UID first.
The changes in nsMsgDatabase.cpp/nsMsgDBFolder.cpp  independently fix the new
 message detection.
The changes in nsImapMailFolder.cpp independently fix the filtering.

Differential Revision: https://phabricator.services.mozilla.com/D197470

--HG--
extra : amend_source : e3003df73ec1ebba37a8b98920c5495cd346e82a