mailnews/imap/src/nsImapMailFolder.h
@@ -503,6 +503,7 @@ class nsImapMailFolder : public nsMsgDBFolder,
   /// the junk destination folder
   nsCOMPtr<nsIMsgFolder> mSpamFolder;
   nsMsgKey m_curMsgUid;
+  nsMsgKey m_previousHighestUid;
   uint32_t m_uidValidity;
 
   // These three vars are used to store counts from STATUS or SELECT command
